<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.folioreader.ui.activity.FolioActivity">

    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item_search"
        app:showAsAction="always"
        tools:showAsAction="always" />

    <item
        android:id="@+id/actionIndex"
        android:icon="@drawable/ic_index"
        android:title="@string/menu_item_contents"
        app:showAsAction="always"
        app:iconTint="@color/default_theme_accent_color"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemConfig"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_item_config"
        app:showAsAction="always"
        tools:showAsAction="always" />

    <item
        android:id="@+id/actionBookmarked"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/menu_item_bookmarks"
        app:showAsAction="ifRoom"
        app:iconTint="@color/default_theme_accent_color"
        tools:showAsAction="always" />

    <item
        android:id="@+id/itemTts"
        android:icon="@drawable/man_speech_icon"
        android:title="@string/menu_item_tts"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />

</menu>