<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_size_medium">


    <TextView
        android:id="@+id/textView2"
        style="@style/app_secondary_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_small_x"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andada" />

            <Button
                android:id="@+id/button2"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lato" />

            <Button
                android:id="@+id/button3"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lora" />

            <Button
                android:id="@+id/button4"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raleway" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        style="@style/app_secondary_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_small_x"
        android:text="@string/text_size"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_small_x"
            app:singleSelection="true">

            <Button
                android:id="@+id/bt_font_xs"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size_xs" />

            <Button
                android:id="@+id/bt_font_s"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size_s" />

            <Button
                android:id="@+id/bt_font_m"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/font_size_m" />

            <Button
                android:id="@+id/bt_font_l"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size_l" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView4"
        style="@style/app_secondary_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_small_x"
        android:text="@string/scroll_direction"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_small_x"
            app:singleSelection="true">

            <Button
                android:id="@+id/bt_scroll_vertical"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scroll_vertical" />

            <Button
                android:id="@+id/bt_scroll_horizontal"
                style="@style/toggle_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scroll_horizontal" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>